--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+html {
+
+}
+
 body {
 	margin: 0px;
 	font-style: Helvetica;
+	background:url(images/hangar.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 #logo {
@@ -14,4 +23,8 @@ body {
 	justifiy-content: center;
 	height: 100vh;
 	flex-direction: column;
+	color: black;
+}
+.separateur {
+	height: 300px;
 }
